# BetaCraft-Launcher-Java

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle
.github/workflows/: build.yml
assets/: java_repo.json
assets/lang/: Japanese.json  Kashubian (Zrzeszinka).json  Kashubian.json  Polish (alternative).json  Polish (cyrillic).json  Polish.json
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt
src/core/: Account.cpp  AssetIndex.cpp  AssetIndex.h  AuthMicrosoft.cpp  AuthMicrosoft.h  Betacraft.cpp  Betacraft.h  CMakeLists.txt  Constants.hpp  FileSystem.cpp  Game.cpp  Instance.cpp  Instances.cpp  Instances.hpp  JavaInstallations.cpp  JsonExtension.cpp  Mod.cpp  Network.cpp  ProcessHandler.cpp  Settings.cpp  StringUtils.cpp  Utils.hpp  Version.cpp  VersionList.cpp
src/core/instances/: Instance.cpp  Instance.hpp  InstanceGroup.cpp  InstanceGroup.hpp  InstanceList.cpp  InstanceList.hpp
src/core/tests/: CMakeLists.txt  InstancesTests.cpp  UtilsTests.cpp
src/core/tests/instances/: InstanceGroupTests.cpp  InstanceListTests.cpp  InstanceTests.cpp
src/tests/: CMakeLists.txt  test.cpp
src/ui/: AboutWidget.cpp  Betacraft.cpp  ConsoleLogWidget.cpp  MainWindow.cpp  MainWindow.h  assets.qrc  main.cpp
src/ui/accounts/: AccountListItemWidget.cpp  AccountListItemWidget.h  AccountListWidget.cpp  AddAccountMicrosoftWidget.cpp  AddAccountWidget.cpp
src/ui/instances/: AddInstanceWidget.cpp  InstanceEditAppearanceWidget.cpp  InstanceEditAppearanceWidget.h  InstanceEditArgumentsWidget.h  InstanceEditServerWidget.h  InstanceEditVersionWidget.cpp  (+3 more)
(+27 files in other folders)
